--- a/asset-transfer-basic/application-javascript/views/main.ejs
+++ b/asset-transfer-basic/application-javascript/views/main.ejs
@@ -21,11 +21,8 @@
         <div style="border-color: aquamarine;width: 50%;height: 50%;border-style: solid;  display: flex; flex-direction: column; align-items: center">
             <p id="assetsAPoner"></p>
             <form action="http://localhost:3000/postData" method="post" style="border-color: black;border-style: solid;  display: flex; flex-direction: column; align-items: center">
-                <label>Value</label> <input type="text" name="value">
-                <label>Color</label> <input type="text" name="color">
-                <label>Size</label> <input type="text" name="size">
-                <label>ID</label> <input type="text" name="id">
-                <label>Owner</label> <input type="text" name="owner">
+                <label>Temperature</label> <input type="text" name="temperature">
+                <label>Pressure</label> <input type="text" name="pressure">
                 <input type="submit">
             </form>
         </div>
