--- a/asset-transfer-basic/application-javascript/views/main.ejs
+++ b/asset-transfer-basic/application-javascript/views/main.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="/javascripts/paint.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
     </head>
     <body>
     <div style="display: flex; flex-direction: column; align-items: center">
@@ -9,6 +11,12 @@
         <br>
         <h1><%= message %></h1>
         <br>
+
+        <div style="border-color: aquamarine;width: 50%;height: 50%;border-style: solid;  display: flex; flex-direction: column; align-items: center">
+        <canvas id="myChart" width="200" height="200"></canvas>
+        </div>
+
+
         <button onclick="f()"> Get cosas</button>
         <br>
         <div style="border-color: aquamarine;width: 50%;height: 50%;border-style: solid; ">
@@ -40,7 +48,7 @@
         <div style="overflow: scroll; border-color: aquamarine;width: 50%;height: 50%;border-style: solid; ">
             <p id="events"/>
         </div>
-
+        <script type="text/javascript" src="/javascripts/paint.js"></script>
 
     </div>
     </body>
