--- a/asset-transfer-basic/application-javascript/views/main.ejs
+++ b/asset-transfer-basic/application-javascript/views/main.ejs
@@ -13,7 +13,13 @@
         <br>
 
         <div style="border-color: aquamarine;width: 50%;height: 50%;border-style: solid;  display: flex; flex-direction: column; align-items: center">
-        <canvas id="myChart" width="200" height="200"></canvas>
+        <canvas id="tempChart" width="200" height="200"></canvas>
+        <canvas id="humChart" width="200" height="200"></canvas>
+        <canvas id="moveChart" width="200" height="200"></canvas>
+        <canvas id="qualChart" width="200" height="200"></canvas>
+        <canvas id="pressChart" width="200" height="200"></canvas>
+        <canvas id="coorChart" width="200" height="200"></canvas>
+
         </div>
 
 
